--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 rss = "1.0"
 rocket = "0.4.2"
+rust-embed="5.2.0"
 reqwest = "0.9.22"
 tera = "0.11.20"
 serde = "1.0"
